--- a/css/activity.css
+++ b/css/activity.css
@@ -85,8 +85,7 @@ div.back {
   top: 0;
   left: 0; }
 
-/*WAS COMMENTED, not sure why*/
-.canvasHolder.hide {
+/*.canvasHolder.hide {
   transform: scale(0.24);
   top: 117px;
   left: 1%;
@@ -99,7 +98,7 @@ div.back {
 .canvasHolder.hide canvas {
   width: 100%;
   height: 100%; }
-
+*/
 nav {
   position: fixed;
   top: 0px;
